Added transumancia featues. Also added feature to add and view inspecoes. (branch mistake)

--- a/TP2/AndroidApp/HappiBee/app/src/main/res/values/strings.xml
+++ b/TP2/AndroidApp/HappiBee/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">HappiBee</string>
+
+    <string name="mapbox_access_token" translatable="false">sk.eyJ1IjoibHNlcmFwaWNvcyIsImEiOiJjbHB4dDV0YjIwcTdpMmlvMmZzYWJnMTVpIn0.HphHrSlQEbAIEaU4A5c44A</string>
 </resources>
